--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,7 @@
 
-NAME_POSTGRES='djangodb_new_new'
-USER_POSTGRES='postgres'
-USER_PASSWORD_POSTGRES='123456'
+NAME_POSTGRES=
+USER_POSTGRES=
+USER_PASSWORD_POSTGRES=
 
 # email
 EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
